# speleothem

./: .gitignore  pyproject.toml
speleothem/dating/: data_analysis.ipynb  model.ipynb
speleothem/edge_detector/: edge.ipynb  find_peaks.ipynb  generate_data.py  generate_data_proportion.py  metrics.ipynb  result.ipynb  result_train_test.ipynb  test.ipynb  utils.py  view_edge.ipynb
speleothem/exploration/: kmeans.ipynb
speleothem/image/dbe/: database_1600.csv  database_cut_1600.csv  revised_database_cut_1600.csv
speleothem/neural_network/: test.ipynb
speleothem/neural_network/cluster/: cluster.ipynb  cluster_flower.ipynb
speleothem/neural_network/lstm/: __init__.py  dataset.py  model.ipynb
tests/: test_speleothem.py
