[tool.poetry]
name = "speleothem"
version = "0.1.0"
description = ""
authors = ["Dilermando Queiroz <dilermando.queiroz@aluno.ufabc.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
opencv-python = "^4.7.0"
matplotlib = "^3.6.2"
ipywidgets = "^8.0.4"
sklearn = "^0.0.post2"
scikit-learn = "^1.2.1"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
